# H3-Crash-Debug-Helper

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  version.rc.in
.github/workflows/: build.yml
cmake/: setup-zhmmodsdk.cmake
src/: CrashDebugHelper.cpp  CrashDebugHelper.h
